--- a/GameStore.Domain/GameStore.Domain.csproj
+++ b/GameStore.Domain/GameStore.Domain.csproj
@@ -5,4 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\Repository\ProductContext\" />
+    <Folder Include="Interfaces\Services\ProductContext\" />
+  </ItemGroup>
+
 </Project>
