--- a/GameStore.Aplication/GameStore.Aplication.csproj
+++ b/GameStore.Aplication/GameStore.Aplication.csproj
@@ -7,11 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
-    <Folder Include="UseCases\ClientContext\" />
     <Folder Include="UseCases\InteractionContext\" />
     <Folder Include="UseCases\ProductContext\" />
     <Folder Include="UseCases\SaleContext\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GameStore.Domain\GameStore.Domain.csproj" />
   </ItemGroup>
 
 </Project>
